--- a/day1/day1_practice.ipynb
+++ b/day1/day1_practice.ipynb
@@ -6,37 +6,38 @@
         "id": "gSpnWBP5ELSI"
       },
       "source": [
-        "# 実践演習 Day 1：streamlitとFastAPIのデモ\n",
+        "# 実践演習 Day 1：streamlit と FastAPI のデモ\n",
+        "\n",
         "このノートブックでは以下の内容を学習します。\n",
         "\n",
         "- 必要なライブラリのインストールと環境設定\n",
-        "- Hugging Faceからモデルを用いたStreamlitのデモアプリ\n",
-        "- FastAPIとngrokを使用したAPIの公開方法\n",
+        "- Hugging Face からモデルを用いた Streamlit のデモアプリ\n",
+        "- FastAPI と ngrok を使用した API の公開方法\n",
         "\n",
-        "演習を始める前に、HuggingFaceとngrokのアカウントを作成し、\n",
-        "それぞれのAPIトークンを取得する必要があります。\n",
+        "演習を始める前に、HuggingFace と ngrok のアカウントを作成し、\n",
+        "それぞれの API トークンを取得する必要があります。\n",
         "\n",
-        "\n",
-        "演習の時間では、以下の3つのディレクトリを順に説明します。\n",
+        "演習の時間では、以下の 3 つのディレクトリを順に説明します。\n",
         "\n",
         "1. 01_streamlit_UI\n",
         "2. 02_streamlit_app\n",
         "3. 03_FastAPI\n",
         "\n",
-        "2つ目や3つ目からでも始められる様にノートブックを作成しています。\n",
+        "2 つ目や 3 つ目からでも始められる様にノートブックを作成しています。\n",
         "\n",
         "復習の際にもこのノートブックを役立てていただければと思います。\n",
         "\n",
         "### 注意事項\n",
-        "「02_streamlit_app」と「03_FastAPI」では、GPUを使用します。\n",
         "\n",
-        "これらを実行する際は、Google Colab画面上のメニューから「編集」→ 「ノートブックの設定」\n",
+        "「02_streamlit_app」と「03_FastAPI」では、GPU を使用します。\n",
+        "\n",
+        "これらを実行する際は、Google Colab 画面上のメニューから「編集」→ 「ノートブックの設定」\n",
         "\n",
         "「ハードウェアアクセラレーター」の項目の中から、「T4 GPU」を選択してください。\n",
         "\n",
         "このノートブックのデフォルトは「CPU」になっています。\n",
         "\n",
-        "---"
+        "---\n"
       ]
     },
     {
@@ -45,7 +46,7 @@
         "id": "OhtHkJOgELSL"
       },
       "source": [
-        "# 環境変数の設定（1~3共有）\n"
+        "# 環境変数の設定（1~3 共有）\n"
       ]
     },
     {
@@ -54,7 +55,7 @@
         "id": "Y-FjBp4MMQHM"
       },
       "source": [
-        "GitHubから演習用のコードをCloneします。"
+        "GitHub から演習用のコードを Clone します。\n"
       ]
     },
     {
@@ -74,7 +75,7 @@
         "id": "XC8n7yZ_vs1K"
       },
       "source": [
-        "必要なAPIトークンを.envに設定します。\n",
+        "必要な API トークンを.env に設定します。\n",
         "\n",
         "「lecture-ai-engineering/day1」の配下に、「.env_template」ファイルが存在しています。\n",
         "\n",
@@ -82,26 +83,26 @@
         "\n",
         "「.env_template」のファイル名を「.env」に変更します。「.env」ファイルを開くと、以下のような中身になっています。\n",
         "\n",
-        "\n",
         "```\n",
         "HUGGINGFACE_TOKEN=\"hf-********\"\n",
         "NGROK_TOKEN=\"********\"\n",
         "```\n",
-        "ダブルクオーテーションで囲まれた文字列をHuggingfaceのアクセストークンと、ngrokの認証トークンで書き変えてください。\n",
         "\n",
-        "それぞれのアカウントが作成済みであれば、以下のURLからそれぞれのトークンを取得できます。\n",
+        "ダブルクオーテーションで囲まれた文字列を Huggingface のアクセストークンと、ngrok の認証トークンで書き変えてください。\n",
         "\n",
-        "- Huggingfaceのアクセストークン\n",
-        "https://huggingface.co/docs/hub/security-tokens\n",
+        "それぞれのアカウントが作成済みであれば、以下の URL からそれぞれのトークンを取得できます。\n",
         "\n",
-        "- ngrokの認証トークン\n",
-        "https://dashboard.ngrok.com/get-started/your-authtoken\n",
+        "- Huggingface のアクセストークン\n",
+        "  https://huggingface.co/docs/hub/security-tokens\n",
         "\n",
-        "書き換えたら、「.env」ファイルをローカルのPCにダウンロードしてください。\n",
+        "- ngrok の認証トークン\n",
+        "  https://dashboard.ngrok.com/get-started/your-authtoken\n",
         "\n",
-        "「01_streamlit_UI」から「02_streamlit_app」へ進む際に、CPUからGPUの利用に切り替えるため、セッションが一度切れてしまいます。\n",
+        "書き換えたら、「.env」ファイルをローカルの PC にダウンロードしてください。\n",
         "\n",
-        "その際に、トークンを設定した「.env」ファイルは再作成することになるので、その手間を減らすために「.env」ファイルをダウンロードしておくと良いです。"
+        "「01_streamlit_UI」から「02_streamlit_app」へ進む際に、CPU から GPU の利用に切り替えるため、セッションが一度切れてしまいます。\n",
+        "\n",
+        "その際に、トークンを設定した「.env」ファイルは再作成することになるので、その手間を減らすために「.env」ファイルをダウンロードしておくと良いです。\n"
       ]
     },
     {
@@ -110,7 +111,7 @@
         "id": "Py1BFS5RqcSS"
       },
       "source": [
-        "「.env」ファイルを読み込み、環境変数として設定します。次のセルを実行し、最終的に「True」が表示されていればうまく読み込めています。"
+        "「.env」ファイルを読み込み、環境変数として設定します。次のセルを実行し、最終的に「True」が表示されていればうまく読み込めています。\n"
       ]
     },
     {
@@ -136,7 +137,7 @@
       "source": [
         "# 01_streamlit_UI\n",
         "\n",
-        "ディレクトリ「01_streamlit_UI」に移動します。"
+        "ディレクトリ「01_streamlit_UI」に移動します。\n"
       ]
     },
     {
@@ -156,7 +157,7 @@
         "id": "eVp-aEIkELSM"
       },
       "source": [
-        "必要なライブラリをインストールします。"
+        "必要なライブラリをインストールします。\n"
       ]
     },
     {
@@ -177,7 +178,7 @@
         "id": "Yyw6VHaTELSN"
       },
       "source": [
-        "ngrokのトークンを使用して、認証を行います。"
+        "ngrok のトークンを使用して、認証を行います。\n"
       ]
     },
     {
@@ -197,7 +198,7 @@
         "id": "RssTcD_IELSN"
       },
       "source": [
-        "アプリを起動します。"
+        "アプリを起動します。\n"
       ]
     },
     {
@@ -221,15 +222,15 @@
         "id": "kbYyXVFjELSN"
       },
       "source": [
-        "公開URLの後に記載されているURLにブラウザでアクセスすると、streamlitのUIが表示されます。\n",
+        "公開 URL の後に記載されている URL にブラウザでアクセスすると、streamlit の UI が表示されます。\n",
         "\n",
-        "app.pyのコメントアウトされている箇所を編集することで、UIがどの様に変化するか確認してみましょう。\n",
+        "app.py のコメントアウトされている箇所を編集することで、UI がどの様に変化するか確認してみましょう。\n",
         "\n",
-        "streamlitの公式ページには、ギャラリーページがあります。\n",
+        "streamlit の公式ページには、ギャラリーページがあります。\n",
         "\n",
-        "streamlitを使うとpythonという一つの言語であっても、様々なUIを実現できることがわかると思います。\n",
+        "streamlit を使うと python という一つの言語であっても、様々な UI を実現できることがわかると思います。\n",
         "\n",
-        "https://streamlit.io/gallery"
+        "https://streamlit.io/gallery\n"
       ]
     },
     {
@@ -238,7 +239,7 @@
         "id": "MmtP5GLOELSN"
       },
       "source": [
-        "後片付けとして、使う必要のないngrokのトンネルを削除します。"
+        "後片付けとして、使う必要のない ngrok のトンネルを削除します。\n"
       ]
     },
     {
@@ -250,6 +251,7 @@
       "outputs": [],
       "source": [
         "from pyngrok import ngrok\n",
+        "\n",
         "ngrok.kill()"
       ]
     },
@@ -259,7 +261,7 @@
         "id": "o-T8tFpyELSO"
       },
       "source": [
-        "# 02_streamlit_app"
+        "# 02_streamlit_app\n"
       ]
     },
     {
@@ -268,8 +270,7 @@
         "id": "QqogFQKnELSO"
       },
       "source": [
-        "\n",
-        "ディレクトリ「02_streamlit_app」に移動します。"
+        "ディレクトリ「02_streamlit_app」に移動します。\n"
       ]
     },
     {
@@ -289,7 +290,7 @@
         "id": "-XUH2AstELSO"
       },
       "source": [
-        "必要なライブラリをインストールします。"
+        "必要なライブラリをインストールします。\n"
       ]
     },
     {
@@ -310,7 +311,7 @@
         "id": "ZO31umGZELSO"
       },
       "source": [
-        "ngrokとhuggigfaceのトークンを使用して、認証を行います。"
+        "ngrok と huggigface のトークンを使用して、認証を行います。\n"
       ]
     },
     {
@@ -331,7 +332,7 @@
         "id": "dz4WrELLELSP"
       },
       "source": [
-        "stramlitでHuggingfaceのトークン情報を扱うために、streamlit用の設定ファイル（.streamlit）を作成し、トークンの情報を格納します。"
+        "stramlit で Huggingface のトークン情報を扱うために、streamlit 用の設定ファイル（.streamlit）を作成し、トークンの情報を格納します。\n"
       ]
     },
     {
@@ -347,17 +348,13 @@
         "import toml\n",
         "\n",
         "# 設定ファイルのディレクトリ確保\n",
-        "os.makedirs('.streamlit', exist_ok=True)\n",
+        "os.makedirs(\".streamlit\", exist_ok=True)\n",
         "\n",
         "# 環境変数から取得したトークンを設定ファイルに書き込む\n",
-        "secrets = {\n",
-        "    \"huggingface\": {\n",
-        "        \"token\": os.environ.get(\"HUGGINGFACE_TOKEN\", \"\")\n",
-        "    }\n",
-        "}\n",
+        "secrets = {\"huggingface\": {\"token\": os.environ.get(\"HUGGINGFACE_TOKEN\", \"\")}}\n",
         "\n",
         "# 設定ファイルを書き込む\n",
-        "with open('.streamlit/secrets.toml', 'w') as f:\n",
+        "with open(\".streamlit/secrets.toml\", \"w\") as f:\n",
         "    toml.dump(secrets, f)"
       ]
     },
@@ -369,9 +366,9 @@
       "source": [
         "アプリを起動します。\n",
         "\n",
-        "02_streamlit_appでは、Huggingfaceからモデルをダウンロードするため、初回起動には2分程度時間がかかります。\n",
+        "02_streamlit_app では、Huggingface からモデルをダウンロードするため、初回起動には 2 分程度時間がかかります。\n",
         "\n",
-        "この待ち時間を利用して、app.pyのコードを確認してみましょう。"
+        "この待ち時間を利用して、app.py のコードを確認してみましょう。\n"
       ]
     },
     {
@@ -395,16 +392,16 @@
       "source": [
         "アプリケーションの機能としては、チャット機能や履歴閲覧があります。\n",
         "\n",
-        "これらの機能を実現するためには、StreamlitによるUI部分だけではなく、SQLiteを使用したチャット履歴の保存やLLMのモデルを呼び出した推論などの処理を組み合わせることで実現しています。\n",
+        "これらの機能を実現するためには、Streamlit による UI 部分だけではなく、SQLite を使用したチャット履歴の保存や LLM のモデルを呼び出した推論などの処理を組み合わせることで実現しています。\n",
         "\n",
-        "- **`app.py`**: アプリケーションのエントリーポイント。チャット機能、履歴閲覧、サンプルデータ管理のUIを提供します。\n",
-        "- **`ui.py`**: チャットページや履歴閲覧ページなど、アプリケーションのUIロジックを管理します。\n",
-        "- **`llm.py`**: LLMモデルのロードとテキスト生成を行うモジュール。\n",
-        "- **`database.py`**: SQLiteデータベースを使用してチャット履歴やフィードバックを保存・管理します。\n",
-        "- **`metrics.py`**: BLEUスコアやコサイン類似度など、回答の評価指標を計算するモジュール。\n",
+        "- **`app.py`**: アプリケーションのエントリーポイント。チャット機能、履歴閲覧、サンプルデータ管理の UI を提供します。\n",
+        "- **`ui.py`**: チャットページや履歴閲覧ページなど、アプリケーションの UI ロジックを管理します。\n",
+        "- **`llm.py`**: LLM モデルのロードとテキスト生成を行うモジュール。\n",
+        "- **`database.py`**: SQLite データベースを使用してチャット履歴やフィードバックを保存・管理します。\n",
+        "- **`metrics.py`**: BLEU スコアやコサイン類似度など、回答の評価指標を計算するモジュール。\n",
         "- **`data.py`**: サンプルデータの作成やデータベースの初期化を行うモジュール。\n",
         "- **`config.py`**: アプリケーションの設定（モデル名やデータベースファイル名）を管理します。\n",
-        "- **`requirements.txt`**: このアプリケーションを実行するために必要なPythonパッケージ。"
+        "- **`requirements.txt`**: このアプリケーションを実行するために必要な Python パッケージ。\n"
       ]
     },
     {
@@ -413,7 +410,7 @@
         "id": "Xvm8sWFPELSP"
       },
       "source": [
-        "後片付けとして、使う必要のないngrokのトンネルを削除します。"
+        "後片付けとして、使う必要のない ngrok のトンネルを削除します。\n"
       ]
     },
     {
@@ -425,6 +422,7 @@
       "outputs": [],
       "source": [
         "from pyngrok import ngrok\n",
+        "\n",
         "ngrok.kill()"
       ]
     },
@@ -436,7 +434,7 @@
       "source": [
         "# 03_FastAPI\n",
         "\n",
-        "ディレクトリ「03_FastAPI」に移動します。"
+        "ディレクトリ「03_FastAPI」に移動します。\n"
       ]
     },
     {
@@ -456,7 +454,7 @@
         "id": "f45TDsNzELSQ"
       },
       "source": [
-        "必要なライブラリをインストールします。"
+        "必要なライブラリをインストールします。\n"
       ]
     },
     {
@@ -477,7 +475,7 @@
         "id": "JfrmE2VmELSQ"
       },
       "source": [
-        "ngrokとhuggigfaceのトークンを使用して、認証を行います。"
+        "ngrok と huggigface のトークンを使用して、認証を行います。\n"
       ]
     },
     {
@@ -502,7 +500,7 @@
         "\n",
         "「02_streamlit_app」から続けて「03_FastAPI」を実行している場合は、モデルのダウンロードが済んでいるため、すぐにサービスが立ち上がります。\n",
         "\n",
-        "「03_FastAPI」のみを実行している場合は、初回の起動時にモデルのダウンロードが始まるので、モデルのダウンロードが終わるまで数分間待ちましょう。"
+        "「03_FastAPI」のみを実行している場合は、初回の起動時にモデルのダウンロードが始まるので、モデルのダウンロードが終わるまで数分間待ちましょう。\n"
       ]
     },
     {
@@ -522,13 +520,13 @@
         "id": "RLubjIhbELSR"
       },
       "source": [
-        "FastAPIが起動すると、APIとクライアントが通信するためのURL（エンドポイント）が作られます。\n",
+        "FastAPI が起動すると、API とクライアントが通信するための URL（エンドポイント）が作られます。\n",
         "\n",
-        "URLが作られるのと合わせて、Swagger UIというWebインターフェースが作られます。\n",
+        "URL が作られるのと合わせて、Swagger UI という Web インターフェースが作られます。\n",
         "\n",
-        "Swagger UIにアクセスすることで、APIの仕様を確認できたり、APIをテストすることができます。\n",
+        "Swagger UI にアクセスすることで、API の仕様を確認できたり、API をテストすることができます。\n",
         "\n",
-        "Swagger UIを利用することで、APIを通してLLMを動かしてみましょう。"
+        "Swagger UI を利用することで、API を通して LLM を動かしてみましょう。\n"
       ]
     },
     {
@@ -537,7 +535,7 @@
         "id": "XgumW3mGELSR"
       },
       "source": [
-        "後片付けとして、使う必要のないngrokのトンネルを削除します。"
+        "後片付けとして、使う必要のない ngrok のトンネルを削除します。\n"
       ]
     },
     {
@@ -549,6 +547,7 @@
       "outputs": [],
       "source": [
         "from pyngrok import ngrok\n",
+        "\n",
         "ngrok.kill()"
       ]
     }
@@ -558,11 +557,13 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
